--- a/dashboard.html
+++ b/dashboard.html
@@ -540,14 +540,7 @@
                                        <i class="uil uil-setting"></i>
                                        Settings</a>
                                  </li>
-                                 <li>
-                                    <a href="">
-                                       <i class="uil uil-key-skeleton"></i> Billing</a>
-                                 </li>
-                                 <li>
-                                    <a href="">
-                                       <i class="uil uil-users-alt"></i> Activity</a>
-                                 </li>
+                                
                                  <li>
                                     <a href="">
                                        <i class="uil uil-bell"></i> Help</a>
@@ -819,16 +812,16 @@
                      <div class="ap-po-details ap-po-details--luodcy  overview-card-shape radius-xl d-flex justify-content-between">
                         <div class=" ap-po-details-content d-flex flex-wrap justify-content-between w-100">
                            <div class="ap-po-details__titlebar">
-                              <p>Total Products</p>
-                              <h1>100+</h1>
+                              <p>Fakultas</p>
+                              <h1>100</h1>
                               <div class="ap-po-details-time">
-                                 <span class="color-success"><i class="las la-arrow-up"></i>
-                                    <strong>25.36%</strong></span>
-                                 <small>Since last month</small>
+                                 <span class="color-success"><i class=""></i>
+                                    <strong></strong></span>
+                                 <small></small>
                               </div>
                            </div>
                            <div class="ap-po-details__icon-area color-primary">
-                              <i class="uil uil-arrow-growth"></i>
+                              <i class="fas fa-book-open"></i>
                            </div>
                         </div>
 
@@ -841,12 +834,13 @@
                      <div class="ap-po-details ap-po-details--luodcy  overview-card-shape radius-xl d-flex justify-content-between">
                         <div class=" ap-po-details-content d-flex flex-wrap justify-content-between w-100">
                            <div class="ap-po-details__titlebar">
-                              <p>Total Orders</p>
-                              <h1>30,825</h1>
+                              <p>Program Studi
+                              </p>
+                              <h1>30</h1>
                               <div class="ap-po-details-time">
-                                 <span class="color-success"><i class="las la-arrow-up"></i>
-                                    <strong>25.36%</strong></span>
-                                 <small>Since last month</small>
+                                 <span class="color-success"><i class=""></i>
+                                    <strong></strong></span>
+                                 <small></small>
                               </div>
                            </div>
                            <div class="ap-po-details__icon-area color-secondary">
@@ -862,16 +856,16 @@
                      <div class="ap-po-details ap-po-details--luodcy  overview-card-shape radius-xl d-flex justify-content-between">
                         <div class=" ap-po-details-content d-flex flex-wrap justify-content-between w-100">
                            <div class="ap-po-details__titlebar">
-                              <p>Total Sales</p>
-                              <h1>$30,825</h1>
+                              <p>Auditor</p>
+                              <h1>5</h1>
                               <div class="ap-po-details-time">
-                                 <span class="color-danger"><i class="las la-arrow-down"></i>
-                                    <strong>25.36%</strong></span>
-                                 <small>Since last month</small>
+                                 <span class="color-danger"><i class=""></i>
+                                    <strong></strong></span>
+                                 <small></small>
                               </div>
                            </div>
                            <div class="ap-po-details__icon-area color-success">
-                              <i class="uil uil-usd-circle"></i>
+                              <i class="uil uil-award"></i>
                            </div>
                         </div>
 
@@ -883,12 +877,12 @@
                      <div class="ap-po-details ap-po-details--luodcy  overview-card-shape radius-xl d-flex justify-content-between">
                         <div class=" ap-po-details-content d-flex flex-wrap justify-content-between w-100">
                            <div class="ap-po-details__titlebar">
-                              <p>New Customers</p>
-                              <h1>30,825</h1>
+                              <p>AMI Siklus 1</p>
+                              <h1>30</h1>
                               <div class="ap-po-details-time">
-                                 <span class="color-success"><i class="las la-arrow-up"></i>
-                                    <strong>25.36%</strong></span>
-                                 <small>Since last month</small>
+                                 <span class="color-success"><i class=" "></i>
+                                    <strong></strong></span>
+                                 <small></small>
                               </div>
                            </div>
                            <div class="ap-po-details__icon-area color-info">
