--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </button>
     </div>
     <div class="flex justify-center items-center">
-    <div class="grid max-w-4xl grid-cols-1 gap-4 sm:grid-cols-4 sm:gap-5 lg:gap-6 " style="height: 500px; width: fit-content;">
+    <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-4 gap-5 lg:gap-6" style="height: 500px; width: fit-content;">
       <!-- Card 1 -->
       <div class="rounded-lg bg-gradient-to-br from-indigo-500 to-pink-500 py-6 px-5 text-center flex flex-col justify-between">
         <h4 class="text-xl font-semibold text-white">Auditor</h4>
