--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <h3 class="text-3xl text-white font-bold">Sistem Informasi Penjaminan Mutu ULBI (SimPelBi)</h3>
       </button>
     </div>
-    <div class="flex justify-center items-center">
-    <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-4 gap-5 lg:gap-6" style="height: 500px; width: fit-content;">
+    <!-- <div class="flex justify-center items-center"> -->
+    <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-4 gap-5 lg:gap-6">
       <!-- Card 1 -->
       <div class="rounded-lg bg-gradient-to-br from-indigo-500 to-pink-500 py-6 px-5 text-center flex flex-col justify-between">
         <h4 class="text-xl font-semibold text-white">Auditor</h4>
@@ -102,7 +102,7 @@
                           </a>
       </div>
     </div>
-    </div>
+    <!-- </div> -->
   </div>
 </section>
     </div>
