--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/tailwind/tailwind.min.css">
     <link rel="icon" type="image/png" sizes="32x32" href="atis-assets/logo/ulbi/logo PP ULBI.png">
     <script src="js/main.js"></script>
+    <script src="./js/cihuy.js" type="module"></script>
+
 </head>
 <body class="antialiased bg-body text-body font-body">
     <div class="">   
