--- a/app/admins/dashboard.html
+++ b/app/admins/dashboard.html
@@ -46,7 +46,7 @@
    <link rel="stylesheet" href="../../assets/vendor_assets/css/wickedpicker.min.css">
 
    <link rel="stylesheet" href="../../style.css">
-   <link rel="stylesheet" href="../../js/cihuy.js" type="module">
+   <script src="../../js/cihuy.js" type="module"></script>   
 
 
    <!-- endinject -->
