--- a/fakultas/dashboard-fakultas.html
+++ b/fakultas/dashboard-fakultas.html
@@ -102,6 +102,51 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
+
+    <link rel="stylesheet" href="../style.css" />
+    <script src="../js/cihuy.js" type="module"></script>
+    <style>
+      /* CSS untuk memperbaiki tampilan tombol */
+      .custom-button {
+        background-color: #fd8d23;
+        /* Warna latar belakang */
+        color: #fff;
+        /* Warna teks */
+        padding: 5px 15px;
+        /* Ukuran padding */
+        border: none;
+        /* Tanpa border */
+        border-radius: 15px;
+        /* Sudut bulat */
+        cursor: pointer;
+        font-size: 12px;
+      }
+
+      .success-button {
+        background-color: #009e3d;
+        /* Warna latar belakang */
+        color: #fff;
+        /* Warna teks */
+        padding: 5px 15px;
+        /* Ukuran padding */
+        border: none;
+        /* Tanpa border */
+        border-radius: 15px;
+        /* Sudut bulat */
+        cursor: pointer;
+        font-size: 12px;
+      }
+
+      .success-button:hover {
+        background-color: #663cff;
+        /* Warna latar belakang saat hover */
+      }
+
+      .custom-button:hover {
+        background-color: #663cff;
+        /* Warna latar belakang saat hover */
+      }
+    </style>
   </head>
 
   <body class="layout-light side-menu">
@@ -1755,7 +1800,14 @@
                     >
                       <div class="selling-table-wrap">
                         <div class="table-responsive">
-                          <table class="table table--default table-borderless">
+                          <table
+                            class="table mb-0 table-borderless"
+                            data-sorting="true"
+                            data-filter-container="#filter-form-container"
+                            data-paging-current="1"
+                            data-paging-position="right"
+                            data-paging-size="10"
+                          >
                             <thead>
                               <tr>
                                 <th>Nomor</th>
@@ -1764,7 +1816,7 @@
                                 <th>Laporan AMI</th>
                               </tr>
                             </thead>
-                            <tbody></tbody>
+                            <tbody id="content"></tbody>
                           </table>
                         </div>
                       </div>
@@ -2328,6 +2380,7 @@
     <script src="../assets/theme_assets/js/jvectormap-init.js"></script>
     <script src="../assets/theme_assets/js/leaflet-init.js"></script>
     <script src="../assets/theme_assets/js/main.js"></script>
+    <script src="./dashboard-fakultas.js" type="module"></script>
     <!-- endinject-->
   </body>
 </html>
